# Onboarding_AI_Buddy

./: README.md  config.py  graph.py  main.py  pyproject.toml  requirements.txt  save_graph.py
.streamlit/: config.toml
agents/: learning.py  orchestrator.py  profiler.py
app/: app.py  main.py
app/pages/: manager.py
data/mock_db/: dl_groups.json  onboarding.db  onboarding.db-shm  onboarding.db-wal  systems.json  teams.json
data/mock_docs/architecture/: api_design_standards.md  auth_service.md  data_pipeline.md  microservices_map.md  payments_api.md  system_overview.md
data/mock_docs/onboarding/: 30_60_90_day_plan.md  access_provisioning.md  code_review_guide.md  communication_channels.md  day1_checklist.md  on_call_guide.md  team_norms.md  tools_setup.md  vpn_access.md
data/mock_docs/runbooks/: database_failover.md  deployment_guide.md  incident_response.md  kafka_consumer_runbook.md  logging_standards.md  secrets_config_management.md
data/seeds/: embed_docs.py  gen_db.py  gen_docs.py  migrate_access_requests.py  validate_json_schema.py
data/vectorstore/: chroma.sqlite3
evaluation/: test_sql.py
memory/: profile_store.py  progress.py
tools/: access.py  email.py  ticketing.py
