[project]
name = "onboarding-ai-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "huggingface-hub>=1.7.1",
    "langchain==1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langgraph>=1.0.10",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
]
